<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            >

            <TextView
                style="@style/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_records_name"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/recordName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_barder"
                android:hint="@string/coffee"
                android:padding="5dp"
                android:textAlignment="center"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <Button
                    android:textColor="@color/seafoam_dark"
                    android:background="@drawable/bt_present_data"
                    android:id="@+id/saveBt"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="16sp"
                    android:layout_margin="10dp"/>

                <Button

                    android:textColor="@color/seafoam_dark"
                    android:background="@drawable/bt_present_data"
                    android:id="@+id/cancelBt"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:layout_margin="10dp"/>

            </LinearLayout>
        </LinearLayout>


</androidx.cardview.widget.CardView>